sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:6: error: '=' expected but ';' found.
  while (ecart>1 || changement){
^AlgCombSort:11: error: '(' expected but identifier found.
      if plusPetit(i+ecart,i){
         ^