sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  val lgr:Int = getNombreValeurs()
  var ecart:Int = lgr
  var changement == true
  while (ecart>1 || changement){
    changement = false
    ecart=ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
    i = 0
    while (i+ecart<lgr){
      if plusPetit(i+ecart,i){
        echange(i,i+ecart)
        changement = true
      }
      i += 1
    }
    
  }
}